--- a/test.html
+++ b/test.html
@@ -9,12 +9,24 @@
 
 <body>
   <script>
-    function test() {
-      var a = 5;
-      console.log(this.a)
+    function baz() {
+      // 当前调用栈是：全局 -> baz
+      // 因此，当前调用位置是全局作用域
+      console.log("baz");
+      bar(); // <-- bar 的调用位置
     }
-    var a = 3;
-    test()
+    function bar() {
+      // 当前调用栈是 baz -> bar
+      // 因此，当前调用位置在 baz 中
+      console.log("bar");
+      foo(); // <-- foo 的调用位置
+    }
+    function foo() {
+      // 当前调用栈是 baz -> bar -> foo
+      // 因此，当前调用位置在 bar 中
+      console.log("foo");
+    }
+    baz();
   </script>
 </body>
 
